--- a/css/main.scss
+++ b/css/main.scss
@@ -20,9 +20,52 @@ $caption: #{(.618em * $scale)};
   align-items: center;
   background-color: $blue;
   display: flex;
-  flex-direction: row;
-  height: 100vh;
+  flex-direction: column;
   justify-content: center;
+  min-height: 100vh;
   overflow: hidden;
   text-align: center;
+}
+
+.snippet {
+  max-width: 100vw;
+  text-align: left;
+}
+
+.slide--css {
+  background-color: $white;
+
+  .slide--css__half {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    justify-content: center;
+    overflow: hidden;
+    text-align: center;
+
+    @media (min-width: 660px) {
+      flex-direction: row;
+    }
+
+    .slide--css__half__shaq {
+      height: 30%;
+      margin-right: 1em;
+      width: 30%;
+    }
+
+    .slide--css__half__shaq--css {
+      animation: spin 5s linear infinite;
+    }
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
