--- a/css/main.scss
+++ b/css/main.scss
@@ -27,8 +27,8 @@ code {
   background: $white;
   border: solid $black 2px;
   color: $black;
-  margin: 0.5em;
-  padding: 0.5em 1em;
+  margin: .5em;
+  padding: .5em 1em;
   text-decoration: none;
 
   &:hover {
@@ -105,6 +105,26 @@ code {
     }
 
     .slide--play__content__code {
+      padding: 1em;
+      width: calc(100% - 2em);
+    }
+  }
+}
+
+.slide--finished {
+  .slide--finished__content {
+    padding-top: 5em;
+    width: 100%;
+
+    .slide--finished__content__leonardo {
+      height: 10em;
+
+      &.slide--finished__content__leonardo--alt {
+        transform: scaleX(-1);
+      }
+    }
+
+    .slide--finished__content__code {
       padding: 1em;
       width: calc(100% - 2em);
     }
