--- a/css/main.scss
+++ b/css/main.scss
@@ -13,11 +13,14 @@ $p: #{(1em * $scale)};
 $caption: #{(.618em * $scale)};
 
 pre {
+  display: flex;
+  justify-content: center;
   width: 100%;
 }
 
 code {
   height: 15em;
+  max-width: 720px;
 }
 
 a {
@@ -77,7 +80,7 @@ iframe {
 }
 
 .snippet {
-  max-width: 100vw;
+  margin: 0 1em;
   text-align: left;
 }
 
@@ -106,12 +109,12 @@ iframe {
   justify-content: center;
   overflow: hidden;
   text-align: center;
+  width: 100%;
 
   .slide--css__content__half {
     width: calc(100% - 2em);
 
     .slide--css__content__half__shaq {
-      height: 30%;
       margin-right: 1em;
       width: 30%;
     }
